# vprikol-api-python

./: README.md  README.rst  pyproject.toml
vprikol_api/: __init__.py  api.py  main.py  model.py
